<?xml version="1.0"?>
<package format="3">
  <name>tomogram_rsc</name>
  <version>0.1.0</version>
  <description>PCT planner resource package: PCD maps, RViz configs, tomograms, docs.</description>
  <maintainer email="alex@example.com">alex</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
